fixed spacing for timestamp for rightMessage

--- a/src/Components/Messages/Messages.scss
+++ b/src/Components/Messages/Messages.scss
@@ -22,6 +22,10 @@
             color: rgb(245, 245, 245);
             .timestamp {
                 color: rgb(230, 230, 230);
+                margin: -15px 0 -5px 4px;
+            }
+            .spacer {
+                width: 68px;
             }
         }
         .spacer {
